--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@fitbit/sdk": "~4.0.0",
-    "@fitbit/sdk-cli": "^1.6.3"
+    "@fitbit/sdk-cli": "^1.6.3",
+    "jsdoc": "^3.6.3"
   },
   "fitbit": {
     "appUUID": "dc76f02f-4368-43be-8c4b-3c0b6c515d2f",
