--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "appUUID": "dc76f02f-4368-43be-8c4b-3c0b6c515d2f",
     "appType": "app",
     "appDisplayName": "Tartu Bikes",
-    "iconFile": "resources/icon.png",
+    "iconFile": "resources/media/icon.png",
     "wipeColor": "#ffffff",
     "requestedPermissions": [
       "access_internet",
